# soscleaner

./: .copr.enc  .coveralls.yml  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST  MANIFEST.in  README  README.md  SOSCleaner.py  mkdocs.yml  requirements.txt  setup.cfg  setup.py  soscleaner  soscleaner.conf  soscleaner.spec  test_soscleaner.py  tests.py
.github/ISSUE_TEMPLATE/: bug_report.md  hostname-obfuscation-bug.md  keyword-obfuscation-bug.md  mac-obfuscation-bug.md  networking-bug-.md  networking-obfuscation-bug-.md  username-obfuscation-bug.md
docs/: commandline.rst  conf.py  contributing.rst  docstrings.rst  hostname-obfuscation.rst  index.md  index.rst  intro.rst  keyword-obfuscation.rst  license.rst  mac-address-obfuscation.rst  network-obfuscation.rst  user-obfuscation.rst
man/en/: soscleaner.8  soscleaner.conf.5
scripts/: soscleaner
soscleaner/: soscleaner.py
src/: SOSCleaner.py  soscleaner.py  tests.py
src/testdata/sosreport_dir/var/log/: messages
testdata/: config_file  extrafile1  extrafile2  extrafile3  keyword1.txt  keyword2.txt  sosreport1.tar.bz  sosreport1.tar.xz  userfile1
testdata/sosreport_dir/: hostname  hostname2  keywordtest.txt  route  test.txt
testdata/sosreport_dir/etc/: hosts  resolv.conf
testdata/sosreport_dir/sos_commands/last/: last
testdata/sosreport_dir/var/log/: secure
