[bumpversion]
current_version = 0.3.15
commit = True
tag = True
allow_dirty = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:soscleaner/soscleaner.py]

[bumpversion:file:scripts/soscleaner]

[bumpversion:file:soscleaner.spec]

[bumpversion:file:.travis.yml]

