[bumpversion]
current_version = 0.3.105
commit = False
tag = False
allow_dirty = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:soscleaner/soscleaner.py]

[bumpversion:file:scripts/soscleaner]

[bumpversion:file:soscleaner.spec]

[bumpversion:file:docs/conf.py]

